--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ github_username:  jekyll
 # Build settings
 # theme: minima
 remote_theme: "mmistakes/minimal-mistakes@4.24.0"
+minimal_mistakes_skin: "default" # "dirt"
 # theme: minimal-mistakes-jekyll
 plugins:
   - jekyll-feed
